@@ -6,7 +6,7 @@ ENV{GENERATED}=="?*",   GOTO="cd_aliases_generator_end"
 
 # Fail the uevent if the autogenerated rules cannot be saved
 ENV{ID_CDROM}=="?*", PROGRAM="/bin/grep -c ' / [^[:space:]]* rw' /proc/mounts", \
-  RESULT!="2", RUN+="/bin/false", GOTO="cd_aliases_generator_end"
+  RESULT!="1", RUN+="/bin/false", GOTO="cd_aliases_generator_end"
 
 ENV{ID_CDROM}=="?*", PROGRAM="write_cd_rules", SYMLINK+="%c"
 
