@@ -1,3 +1,6 @@
+2017-10-27  <bdubbs@linuxfromscratch.org>
+   * 83-cdrom-symlinks.rules: Adjust test for writable root directory.
+
 2014-03-02  <bdubbs@linuxfromscratch.org>
    * Makefile.lfs: Remove build procedures leaving only LFS rules
 
